feat: New Font for Titles & new implemtation of card text
Se implementa que cuando un equipo de refrigeración se encuentre activo, el texto salga de color verde

--- a/src/app/public/components/navbar/navbar.component.html
+++ b/src/app/public/components/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar">
   <div class="navbar-logo">
-    <img src="assets/images/logo.png" alt="Logo">
+    <img src="../../../assets/images/logo.png" alt="Logo">
   </div>
   <div class="navbar-links">
     <a routerLink="/">Inventory</a>
     <a routerLink="/login">Collaborate</a>
+
   </div>
 </nav>
