--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+
+
 .container {
   padding: 2em;
 }
@@ -48,5 +51,9 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el texto */
+  text-align: center;
+}
+.centered-text {
+  font-family: 'Secular One', sans-serif;
   text-align: center;
 }
