--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <section class="notifications">
-    <h2>Notificaciones</h2>
+    <h2 class="centered-text">Notificaciones</h2>
     <mat-grid-list cols="4" rowHeight="100px">
       <mat-grid-tile
               *ngFor="let tile of tiles"
@@ -16,13 +16,13 @@
   </section>
 
   <section class="cards">
-    <h2>Cards</h2>
+    <h2 class="centered-text">Equipos de Refrigeración</h2>
     <div class="card-grid">
       <div class="card" *ngFor="let card of cards">
         <img [src]="card.image" alt="Card image">
         <div class="card-info">
           <h3>{{ card.title }}</h3>
-          <p>{{ card.description }}</p>
+          <p [ngStyle]="{'color': getTextColor(card.description)}">{{ card.description }}</p>
         </div>
       </div>
     </div>
