--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,3 +57,19 @@
   font-family: 'Secular One', sans-serif;
   text-align: center;
 }
+
+.responsive-text {
+  font-size: 1.2rem;
+}
+
+@media (max-width: 600px) {
+  .responsive-text {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .responsive-text {
+    font-size: 0.8rem;
+  }
+}
